cabal-version:      2.4
name:               language-sleigh
version:            0.1.0.0
synopsis:           A parser for Ghidra Sleigh files

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tristan Ravitch
maintainer:         tristan@ravit.ch

-- A copyright notice.
-- copyright:
category:           Reverse Engineering
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Language.Sleigh

    -- Modules included in this library but not exported.
    other-modules:    Language.Sleigh.AST
                      Language.Sleigh.Identifier
                      Language.Sleigh.ParserMonad
                      Language.Sleigh.Parser
                      Language.Sleigh.Preprocessor
                      Language.Sleigh.Token

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13 && < 5,
                      bytestring,
                      containers,
                      filepath,
                      lens,
                      megaparsec >= 8 && < 10,
                      mtl >= 2 && < 3,
                      prettyprinter >= 1 && < 2,
                      text >= 1 && < 2
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

executable sleigh-parser
    main-is:          Main.hs
    hs-source-dirs:   tools/sleigh-parser
    ghc-options:      -Wall -Wcompat
    default-language: Haskell2010
    build-depends:    language-sleigh,
                      base,
                      bytestring,
                      optparse-applicative,
                      prettyprinter,
                      megaparsec

test-suite sleigh-parser-tests
  type: exitcode-stdio-1.0
  main-is: SleighTests.hs
  hs-source-dirs: tests
  build-depends: language-sleigh,
                 base,
                 bytestring,
                 megaparsec,
                 tasty,
                 tasty-hunit
  default-language: Haskell2010
  ghc-options:   -Wall -Wcompat
